--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,7 @@ phases:
       - echo Logging in to Amazon ECR...
       - aws --version
       #- aws ecr get-login-password --region eu-central-1 --profile techstarter | docker login --username AWS --password-stdin 303368150375.dkr.ecr.eu-central-1.amazonaws.com #copy URI of ECR repository, remove the image name /my-custom-image part at the end 
+      #- aws ecr get-login-password --region eu-central-1 --profile techstarter | docker login --username AWS --password-stdin 303368150375.dkr.ecr.eu-central-1.amazonaws.com
       - aws ecr get-login-password --region eu-central-1 --profile techstarter | docker login --username AWS --password-stdin 303368150375.dkr.ecr.eu-central-1.amazonaws.com
       - REPOSITORY_URI=303368150375.dkr.ecr.eu-central-1.amazonaws.com/my-custom-image #copy URI of the repository in ECR
       #- COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
