--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,3 +1,33 @@
+# version: 0.2
+
+# phases:
+#   pre_build:
+#     commands:
+#       - echo Logging in to Amazon ECR...
+#       - aws --version
+#       #- aws ecr get-login-password --region eu-central-1 --profile techstarter | docker login --username AWS --password-stdin 303368150375.dkr.ecr.eu-central-1.amazonaws.com #copy URI of ECR repository, remove the image name /my-custom-image part at the end 
+#       #- aws ecr get-login-password --region eu-central-1 --profile techstarter | docker login --username AWS --password-stdin 303368150375.dkr.ecr.eu-central-1.amazonaws.com
+#       - aws ecr get-login-password --region eu-central-1 --profile techstarter | docker login --username AWS --password-stdin 303368150375.dkr.ecr.eu-central-1.amazonaws.com
+#       - REPOSITORY_URI=303368150375.dkr.ecr.eu-central-1.amazonaws.com/my-custom-image #copy URI of the repository in ECR
+#       #- COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+#       - IMAGE_TAG=${COMMIT_HASH:=latest}
+#   build:
+#     commands:
+#       - echo Build started on `date`
+#       - echo Building the Docker image...
+#       - docker build -t $REPOSITORY_URI:latest .
+#       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+#   post_build:
+#     commands:
+#       - echo Build completed on `date`
+#       - echo Pushing the Docker images...
+#       - docker push $REPOSITORY_URI:latest
+#       - docker push $REPOSITORY_URI:$IMAGE_TAG
+#       - echo Writing image definitions file...
+#       - printf '[{"name":"my-custome-image","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+# artifacts:
+#     files: imagedefinitions.json
+
 version: 0.2
 
 phases:
@@ -5,11 +35,9 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      #- aws ecr get-login-password --region eu-central-1 --profile techstarter | docker login --username AWS --password-stdin 303368150375.dkr.ecr.eu-central-1.amazonaws.com #copy URI of ECR repository, remove the image name /my-custom-image part at the end 
-      #- aws ecr get-login-password --region eu-central-1 --profile techstarter | docker login --username AWS --password-stdin 303368150375.dkr.ecr.eu-central-1.amazonaws.com
-      - aws ecr get-login-password --region eu-central-1 --profile techstarter | docker login --username AWS --password-stdin 303368150375.dkr.ecr.eu-central-1.amazonaws.com
-      - REPOSITORY_URI=303368150375.dkr.ecr.eu-central-1.amazonaws.com/my-custom-image #copy URI of the repository in ECR
-      #- COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - $(aws ecr get-login-password --region eu-central-1 --profile techstarter) # Login to ECR
+      - REPOSITORY_URI=303368150375.dkr.ecr.eu-central-1.amazonaws.com/my-custom-image
+      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
     commands:
