--- a/buildspec.yml
+++ b/buildspec.yml
@@ -88,6 +88,8 @@ version: 0.2
 phases:
   pre_build:
     commands:
+      - aws --version
+      - docker --version
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region eu-central-1 --profile techstarter | docker login --username AWS --password-stdin 303368150375.dkr.ecr.eu-central-1.amazonaws.com
       - REPOSITORY_URI=303368150375.dkr.ecr.eu-central-1.amazonaws.com/my-custom-image
