--- a/buildspec.yml
+++ b/buildspec.yml
@@ -91,7 +91,7 @@ phases:
       - aws --version
       - docker --version
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region eu-central-1 --profile techstarter | docker login --username AWS --password-stdin 303368150375.dkr.ecr.eu-central-1.amazonaws.com
+      - aws ecr get-login-password --region eu-central-1 | docker login --username AWS --password-stdin 303368150375.dkr.ecr.eu-central-1.amazonaws.com
       - REPOSITORY_URI=303368150375.dkr.ecr.eu-central-1.amazonaws.com/my-custom-image
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
